--- a/coding_test/dp_makingN.ipynb
+++ b/coding_test/dp_makingN.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0b46893c",
+   "id": "a4eec55c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8355a0e5",
+   "id": "4494e03b",
    "metadata": {},
    "source": [
     "# 1번째"
@@ -35,7 +35,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f5fe5c45",
+   "id": "70806b4f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,6 +46,7 @@
     "    for i in range(1,8):\n",
     "        candiList[i].append(int(\"5\" * i))\n",
     "        for j in candiList[i-1]:\n",
+    "            \n",
     "            candiList[i].append(j+5)\n",
     "            candiList[i].append(j-5)\n",
     "            candiList[i].append(j*5)\n",
@@ -59,19 +60,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
-   "id": "c8aa28f4",
+   "execution_count": 113,
+   "id": "b86d718e",
    "metadata": {},
    "outputs": [],
    "source": [
     "def oper(list1, list2,candiList,candiIdx):\n",
+    "    print(\"<<<<<<func start>>>>>>\")\n",
     "    for i in list1:\n",
     "        for j in list2:\n",
+    "            \n",
+    "            print(\"I am list1 : \", list1)\n",
+    "            print(\"I am list2 : \", list2)\n",
+    "            print(\"I am i : \", i)\n",
+    "            print(\"I am j : \", j)\n",
     "            candiList[candiIdx].append(i+j)\n",
-    "            candiList[candiIdx].append(i-j)\n",
+    "            candiList[candiIdx].append(j-i)\n",
     "            candiList[candiIdx].append(i*j)\n",
-    "            candiList[candiIdx].append(int(i/j))\n",
+    "            candiList[candiIdx].append(int(j/i))\n",
     "            print(candiList)\n",
+    "            print(\"-------------\")\n",
     "            return candiList\n",
     "\n",
     "def solution(N, number):\n",
@@ -80,10 +88,12 @@
     "    for i in range(1,8):\n",
     "        candiList[i].append(int(\"5\" * i))\n",
     "        s = int(i/2)+1\n",
-    "        print(\"I am i : \",i)\n",
-    "        for idx in range(s+1,0,-1):\n",
-    "            print(\"I am s : \",s)\n",
-    "            print(\"------------\")\n",
+    "        print(\"---------\")\n",
+    "        print(\"number : \",i)\n",
+    "        for idx in range(1,s):\n",
+    "            print(\"I am s : \",idx)\n",
+    "            print(\"I am cha s : \", i-idx)\n",
+    "#             print(\"------------\")\n",
     "            oper(candiList[idx],candiList[i-idx],candiList,i)\n",
     "            \n",
     "        if number in candiList[i]:\n",
@@ -94,93 +104,136 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
-   "id": "065bffbb",
+   "execution_count": 114,
+   "id": "d64ebf69",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "I am i :  1\n",
+      "---------\n",
+      "number :  1\n",
+      "---------\n",
+      "number :  2\n",
       "I am s :  1\n",
-      "------------\n",
-      "I am s :  1\n",
-      "------------\n",
-      "I am i :  2\n",
-      "I am s :  2\n",
-      "------------\n",
-      "I am s :  2\n",
-      "------------\n",
-      "I am s :  2\n",
-      "------------\n",
-      "[[], [5], [55, 10, 0, 25, 1], [], [], [], [], []]\n",
-      "I am i :  3\n",
-      "I am s :  2\n",
-      "------------\n",
-      "I am s :  2\n",
-      "------------\n",
-      "[[], [5], [55, 10, 0, 25, 1], [555, 60, 50, 275, 11], [], [], [], []]\n",
-      "I am s :  2\n",
-      "------------\n",
-      "[[], [5], [55, 10, 0, 25, 1], [555, 60, 50, 275, 11, 60, -50, 275, 0], [], [], [], []]\n",
-      "I am i :  4\n",
-      "I am s :  3\n",
-      "------------\n",
-      "I am s :  3\n",
-      "------------\n",
-      "[[], [5], [55, 10, 0, 25, 1], [555, 60, 50, 275, 11, 60, -50, 275, 0], [5555, 560, 550, 2775, 111], [], [], []]\n",
-      "I am s :  3\n",
-      "------------\n",
-      "[[], [5], [55, 10, 0, 25, 1], [555, 60, 50, 275, 11, 60, -50, 275, 0], [5555, 560, 550, 2775, 111, 110, 0, 3025, 1], [], [], []]\n",
-      "I am s :  3\n",
-      "------------\n",
-      "[[], [5], [55, 10, 0, 25, 1], [555, 60, 50, 275, 11, 60, -50, 275, 0], [5555, 560, 550, 2775, 111, 110, 0, 3025, 1, 560, -550, 2775, 0], [], [], []]\n",
+      "I am cha s :  1\n",
+      "<<<<<<func start>>>>>>\n",
+      "I am list1 :  [5]\n",
+      "I am list2 :  [5]\n",
       "I am i :  5\n",
+      "I am j :  5\n",
+      "[[], [5], [55, 10, 0, 25, 1], [], [], [], [], []]\n",
+      "-------------\n",
+      "---------\n",
+      "number :  3\n",
+      "I am s :  1\n",
+      "I am cha s :  2\n",
+      "<<<<<<func start>>>>>>\n",
+      "I am list1 :  [5]\n",
+      "I am list2 :  [55, 10, 0, 25, 1]\n",
+      "I am i :  5\n",
+      "I am j :  55\n",
+      "[[], [5], [55, 10, 0, 25, 1], [555, 60, 50, 275, 11], [], [], [], []]\n",
+      "-------------\n",
+      "---------\n",
+      "number :  4\n",
+      "I am s :  1\n",
+      "I am cha s :  3\n",
+      "<<<<<<func start>>>>>>\n",
+      "I am list1 :  [5]\n",
+      "I am list2 :  [555, 60, 50, 275, 11]\n",
+      "I am i :  5\n",
+      "I am j :  555\n",
+      "[[], [5], [55, 10, 0, 25, 1], [555, 60, 50, 275, 11], [5555, 560, 550, 2775, 111], [], [], []]\n",
+      "-------------\n",
+      "I am s :  2\n",
+      "I am cha s :  2\n",
+      "<<<<<<func start>>>>>>\n",
+      "I am list1 :  [55, 10, 0, 25, 1]\n",
+      "I am list2 :  [55, 10, 0, 25, 1]\n",
+      "I am i :  55\n",
+      "I am j :  55\n",
+      "[[], [5], [55, 10, 0, 25, 1], [555, 60, 50, 275, 11], [5555, 560, 550, 2775, 111, 110, 0, 3025, 1], [], [], []]\n",
+      "-------------\n",
+      "---------\n",
+      "number :  5\n",
+      "I am s :  1\n",
+      "I am cha s :  4\n",
+      "<<<<<<func start>>>>>>\n",
+      "I am list1 :  [5]\n",
+      "I am list2 :  [5555, 560, 550, 2775, 111, 110, 0, 3025, 1]\n",
+      "I am i :  5\n",
+      "I am j :  5555\n",
+      "[[], [5], [55, 10, 0, 25, 1], [555, 60, 50, 275, 11], [5555, 560, 550, 2775, 111, 110, 0, 3025, 1], [55555, 5560, 5550, 27775, 1111], [], []]\n",
+      "-------------\n",
+      "I am s :  2\n",
+      "I am cha s :  3\n",
+      "<<<<<<func start>>>>>>\n",
+      "I am list1 :  [55, 10, 0, 25, 1]\n",
+      "I am list2 :  [555, 60, 50, 275, 11]\n",
+      "I am i :  55\n",
+      "I am j :  555\n",
+      "[[], [5], [55, 10, 0, 25, 1], [555, 60, 50, 275, 11], [5555, 560, 550, 2775, 111, 110, 0, 3025, 1], [55555, 5560, 5550, 27775, 1111, 610, 500, 30525, 10], [], []]\n",
+      "-------------\n",
+      "---------\n",
+      "number :  6\n",
+      "I am s :  1\n",
+      "I am cha s :  5\n",
+      "<<<<<<func start>>>>>>\n",
+      "I am list1 :  [5]\n",
+      "I am list2 :  [55555, 5560, 5550, 27775, 1111, 610, 500, 30525, 10]\n",
+      "I am i :  5\n",
+      "I am j :  55555\n",
+      "[[], [5], [55, 10, 0, 25, 1], [555, 60, 50, 275, 11], [5555, 560, 550, 2775, 111, 110, 0, 3025, 1], [55555, 5560, 5550, 27775, 1111, 610, 500, 30525, 10], [555555, 55560, 55550, 277775, 11111], []]\n",
+      "-------------\n",
+      "I am s :  2\n",
+      "I am cha s :  4\n",
+      "<<<<<<func start>>>>>>\n",
+      "I am list1 :  [55, 10, 0, 25, 1]\n",
+      "I am list2 :  [5555, 560, 550, 2775, 111, 110, 0, 3025, 1]\n",
+      "I am i :  55\n",
+      "I am j :  5555\n",
+      "[[], [5], [55, 10, 0, 25, 1], [555, 60, 50, 275, 11], [5555, 560, 550, 2775, 111, 110, 0, 3025, 1], [55555, 5560, 5550, 27775, 1111, 610, 500, 30525, 10], [555555, 55560, 55550, 277775, 11111, 5610, 5500, 305525, 101], []]\n",
+      "-------------\n",
       "I am s :  3\n",
-      "------------\n",
-      "[[], [5], [55, 10, 0, 25, 1], [555, 60, 50, 275, 11, 60, -50, 275, 0], [5555, 560, 550, 2775, 111, 110, 0, 3025, 1, 560, -550, 2775, 0], [55555, 5560, 5550, 27775, 1111], [], []]\n",
+      "I am cha s :  3\n",
+      "<<<<<<func start>>>>>>\n",
+      "I am list1 :  [555, 60, 50, 275, 11]\n",
+      "I am list2 :  [555, 60, 50, 275, 11]\n",
+      "I am i :  555\n",
+      "I am j :  555\n",
+      "[[], [5], [55, 10, 0, 25, 1], [555, 60, 50, 275, 11], [5555, 560, 550, 2775, 111, 110, 0, 3025, 1], [55555, 5560, 5550, 27775, 1111, 610, 500, 30525, 10], [555555, 55560, 55550, 277775, 11111, 5610, 5500, 305525, 101, 1110, 0, 308025, 1], []]\n",
+      "-------------\n",
+      "---------\n",
+      "number :  7\n",
+      "I am s :  1\n",
+      "I am cha s :  6\n",
+      "<<<<<<func start>>>>>>\n",
+      "I am list1 :  [5]\n",
+      "I am list2 :  [555555, 55560, 55550, 277775, 11111, 5610, 5500, 305525, 101, 1110, 0, 308025, 1]\n",
+      "I am i :  5\n",
+      "I am j :  555555\n",
+      "[[], [5], [55, 10, 0, 25, 1], [555, 60, 50, 275, 11], [5555, 560, 550, 2775, 111, 110, 0, 3025, 1], [55555, 5560, 5550, 27775, 1111, 610, 500, 30525, 10], [555555, 55560, 55550, 277775, 11111, 5610, 5500, 305525, 101, 1110, 0, 308025, 1], [5555555, 555560, 555550, 2777775, 111111]]\n",
+      "-------------\n",
+      "I am s :  2\n",
+      "I am cha s :  5\n",
+      "<<<<<<func start>>>>>>\n",
+      "I am list1 :  [55, 10, 0, 25, 1]\n",
+      "I am list2 :  [55555, 5560, 5550, 27775, 1111, 610, 500, 30525, 10]\n",
+      "I am i :  55\n",
+      "I am j :  55555\n",
+      "[[], [5], [55, 10, 0, 25, 1], [555, 60, 50, 275, 11], [5555, 560, 550, 2775, 111, 110, 0, 3025, 1], [55555, 5560, 5550, 27775, 1111, 610, 500, 30525, 10], [555555, 55560, 55550, 277775, 11111, 5610, 5500, 305525, 101, 1110, 0, 308025, 1], [5555555, 555560, 555550, 2777775, 111111, 55610, 55500, 3055525, 1010]]\n",
+      "-------------\n",
       "I am s :  3\n",
-      "------------\n",
-      "[[], [5], [55, 10, 0, 25, 1], [555, 60, 50, 275, 11, 60, -50, 275, 0], [5555, 560, 550, 2775, 111, 110, 0, 3025, 1, 560, -550, 2775, 0], [55555, 5560, 5550, 27775, 1111, 610, 500, 30525, 10], [], []]\n",
-      "I am s :  3\n",
-      "------------\n",
-      "[[], [5], [55, 10, 0, 25, 1], [555, 60, 50, 275, 11, 60, -50, 275, 0], [5555, 560, 550, 2775, 111, 110, 0, 3025, 1, 560, -550, 2775, 0], [55555, 5560, 5550, 27775, 1111, 610, 500, 30525, 10, 610, -500, 30525, 0], [], []]\n",
-      "I am s :  3\n",
-      "------------\n",
-      "[[], [5], [55, 10, 0, 25, 1], [555, 60, 50, 275, 11, 60, -50, 275, 0], [5555, 560, 550, 2775, 111, 110, 0, 3025, 1, 560, -550, 2775, 0], [55555, 5560, 5550, 27775, 1111, 610, 500, 30525, 10, 610, -500, 30525, 0, 5560, -5550, 27775, 0], [], []]\n",
-      "I am i :  6\n",
-      "I am s :  4\n",
-      "------------\n",
-      "[[], [5], [55, 10, 0, 25, 1], [555, 60, 50, 275, 11, 60, -50, 275, 0], [5555, 560, 550, 2775, 111, 110, 0, 3025, 1, 560, -550, 2775, 0], [55555, 5560, 5550, 27775, 1111, 610, 500, 30525, 10, 610, -500, 30525, 0, 5560, -5550, 27775, 0], [555555, 55560, 55550, 277775, 11111], []]\n",
-      "I am s :  4\n",
-      "------------\n",
-      "[[], [5], [55, 10, 0, 25, 1], [555, 60, 50, 275, 11, 60, -50, 275, 0], [5555, 560, 550, 2775, 111, 110, 0, 3025, 1, 560, -550, 2775, 0], [55555, 5560, 5550, 27775, 1111, 610, 500, 30525, 10, 610, -500, 30525, 0, 5560, -5550, 27775, 0], [555555, 55560, 55550, 277775, 11111, 5610, 5500, 305525, 101], []]\n",
-      "I am s :  4\n",
-      "------------\n",
-      "[[], [5], [55, 10, 0, 25, 1], [555, 60, 50, 275, 11, 60, -50, 275, 0], [5555, 560, 550, 2775, 111, 110, 0, 3025, 1, 560, -550, 2775, 0], [55555, 5560, 5550, 27775, 1111, 610, 500, 30525, 10, 610, -500, 30525, 0, 5560, -5550, 27775, 0], [555555, 55560, 55550, 277775, 11111, 5610, 5500, 305525, 101, 1110, 0, 308025, 1], []]\n",
-      "I am s :  4\n",
-      "------------\n",
-      "[[], [5], [55, 10, 0, 25, 1], [555, 60, 50, 275, 11, 60, -50, 275, 0], [5555, 560, 550, 2775, 111, 110, 0, 3025, 1, 560, -550, 2775, 0], [55555, 5560, 5550, 27775, 1111, 610, 500, 30525, 10, 610, -500, 30525, 0, 5560, -5550, 27775, 0], [555555, 55560, 55550, 277775, 11111, 5610, 5500, 305525, 101, 1110, 0, 308025, 1, 5610, -5500, 305525, 0], []]\n",
-      "I am s :  4\n",
-      "------------\n",
-      "[[], [5], [55, 10, 0, 25, 1], [555, 60, 50, 275, 11, 60, -50, 275, 0], [5555, 560, 550, 2775, 111, 110, 0, 3025, 1, 560, -550, 2775, 0], [55555, 5560, 5550, 27775, 1111, 610, 500, 30525, 10, 610, -500, 30525, 0, 5560, -5550, 27775, 0], [555555, 55560, 55550, 277775, 11111, 5610, 5500, 305525, 101, 1110, 0, 308025, 1, 5610, -5500, 305525, 0, 55560, -55550, 277775, 0], []]\n",
-      "I am i :  7\n",
-      "I am s :  4\n",
-      "------------\n",
-      "[[], [5], [55, 10, 0, 25, 1], [555, 60, 50, 275, 11, 60, -50, 275, 0], [5555, 560, 550, 2775, 111, 110, 0, 3025, 1, 560, -550, 2775, 0], [55555, 5560, 5550, 27775, 1111, 610, 500, 30525, 10, 610, -500, 30525, 0, 5560, -5550, 27775, 0], [555555, 55560, 55550, 277775, 11111, 5610, 5500, 305525, 101, 1110, 0, 308025, 1, 5610, -5500, 305525, 0, 55560, -55550, 277775, 0], [5555555, 55610, 55500, 3055525, 1010]]\n",
-      "I am s :  4\n",
-      "------------\n",
-      "[[], [5], [55, 10, 0, 25, 1], [555, 60, 50, 275, 11, 60, -50, 275, 0], [5555, 560, 550, 2775, 111, 110, 0, 3025, 1, 560, -550, 2775, 0], [55555, 5560, 5550, 27775, 1111, 610, 500, 30525, 10, 610, -500, 30525, 0, 5560, -5550, 27775, 0], [555555, 55560, 55550, 277775, 11111, 5610, 5500, 305525, 101, 1110, 0, 308025, 1, 5610, -5500, 305525, 0, 55560, -55550, 277775, 0], [5555555, 55610, 55500, 3055525, 1010, 6110, 5000, 3083025, 10]]\n",
-      "I am s :  4\n",
-      "------------\n",
-      "[[], [5], [55, 10, 0, 25, 1], [555, 60, 50, 275, 11, 60, -50, 275, 0], [5555, 560, 550, 2775, 111, 110, 0, 3025, 1, 560, -550, 2775, 0], [55555, 5560, 5550, 27775, 1111, 610, 500, 30525, 10, 610, -500, 30525, 0, 5560, -5550, 27775, 0], [555555, 55560, 55550, 277775, 11111, 5610, 5500, 305525, 101, 1110, 0, 308025, 1, 5610, -5500, 305525, 0, 55560, -55550, 277775, 0], [5555555, 55610, 55500, 3055525, 1010, 6110, 5000, 3083025, 10, 6110, -5000, 3083025, 0]]\n",
-      "I am s :  4\n",
-      "------------\n",
-      "[[], [5], [55, 10, 0, 25, 1], [555, 60, 50, 275, 11, 60, -50, 275, 0], [5555, 560, 550, 2775, 111, 110, 0, 3025, 1, 560, -550, 2775, 0], [55555, 5560, 5550, 27775, 1111, 610, 500, 30525, 10, 610, -500, 30525, 0, 5560, -5550, 27775, 0], [555555, 55560, 55550, 277775, 11111, 5610, 5500, 305525, 101, 1110, 0, 308025, 1, 5610, -5500, 305525, 0, 55560, -55550, 277775, 0], [5555555, 55610, 55500, 3055525, 1010, 6110, 5000, 3083025, 10, 6110, -5000, 3083025, 0, 55610, -55500, 3055525, 0]]\n",
-      "I am s :  4\n",
-      "------------\n",
-      "[[], [5], [55, 10, 0, 25, 1], [555, 60, 50, 275, 11, 60, -50, 275, 0], [5555, 560, 550, 2775, 111, 110, 0, 3025, 1, 560, -550, 2775, 0], [55555, 5560, 5550, 27775, 1111, 610, 500, 30525, 10, 610, -500, 30525, 0, 5560, -5550, 27775, 0], [555555, 55560, 55550, 277775, 11111, 5610, 5500, 305525, 101, 1110, 0, 308025, 1, 5610, -5500, 305525, 0, 55560, -55550, 277775, 0], [5555555, 55610, 55500, 3055525, 1010, 6110, 5000, 3083025, 10, 6110, -5000, 3083025, 0, 55610, -55500, 3055525, 0, 555560, -555550, 2777775, 0]]\n"
+      "I am cha s :  4\n",
+      "<<<<<<func start>>>>>>\n",
+      "I am list1 :  [555, 60, 50, 275, 11]\n",
+      "I am list2 :  [5555, 560, 550, 2775, 111, 110, 0, 3025, 1]\n",
+      "I am i :  555\n",
+      "I am j :  5555\n",
+      "[[], [5], [55, 10, 0, 25, 1], [555, 60, 50, 275, 11], [5555, 560, 550, 2775, 111, 110, 0, 3025, 1], [55555, 5560, 5550, 27775, 1111, 610, 500, 30525, 10], [555555, 55560, 55550, 277775, 11111, 5610, 5500, 305525, 101, 1110, 0, 308025, 1], [5555555, 555560, 555550, 2777775, 111111, 55610, 55500, 3055525, 1010, 6110, 5000, 3083025, 10]]\n",
+      "-------------\n"
      ]
     },
     {
@@ -189,7 +242,7 @@
        "-1"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +254,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "34d66088",
+   "id": "b73f754d",
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +275,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "id": "395c1a3b",
+   "id": "58254202",
    "metadata": {},
    "outputs": [
     {
@@ -254,7 +307,7 @@
   {
    "cell_type": "code",
    "execution_count": 41,
-   "id": "e110ae49",
+   "id": "e0eaebb1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +318,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "6fb94c98",
+   "id": "dcc1206a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -276,15 +329,36 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b264dbe1",
+   "id": "c1c79b31",
    "metadata": {},
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
+   "execution_count": 94,
+   "id": "87af8404",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, 448]"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "[5] + [448]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "bcf7ba6a",
+   "id": "c9aa028c",
    "metadata": {},
    "outputs": [],
    "source": []
