--- a/coding_test/bs_cutTree.ipynb
+++ b/coding_test/bs_cutTree.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "05cdf0c7",
+   "id": "a21a1eb3",
    "metadata": {},
    "outputs": [
     {
@@ -25,107 +25,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "eb700061",
+   "execution_count": 49,
+   "id": "9258f95d",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "5 20\n",
-      "4 42 40 26 46\n",
-      "I am height 23\n",
-      "I am sumTree 62\n",
-      "I am height 24\n",
-      "I am sumTree 58\n",
-      "I am height 24\n",
-      "I am sumTree 58\n",
-      "I am height 25\n",
-      "I am sumTree 54\n",
-      "I am height 25\n",
-      "I am sumTree 54\n",
-      "I am height 26\n",
-      "I am sumTree 50\n",
-      "I am height 26\n",
-      "I am sumTree 50\n",
-      "I am height 27\n",
-      "I am sumTree 47\n",
-      "I am height 27\n",
-      "I am sumTree 47\n",
-      "I am height 28\n",
-      "I am sumTree 44\n",
-      "I am height 28\n",
-      "I am sumTree 44\n",
-      "I am height 29\n",
-      "I am sumTree 41\n",
-      "I am height 29\n",
-      "I am sumTree 41\n",
-      "I am height 30\n",
-      "I am sumTree 38\n",
-      "I am height 30\n",
-      "I am sumTree 38\n",
-      "I am height 31\n",
-      "I am sumTree 35\n",
-      "I am height 31\n",
-      "I am sumTree 35\n",
-      "I am height 32\n",
-      "I am sumTree 32\n",
-      "I am height 32\n",
-      "I am sumTree 32\n",
-      "I am height 33\n",
-      "I am sumTree 29\n",
-      "I am height 33\n",
-      "I am sumTree 29\n",
-      "I am height 34\n",
-      "I am sumTree 26\n",
-      "I am height 34\n",
-      "I am sumTree 26\n",
-      "I am height 35\n",
-      "I am sumTree 23\n",
-      "I am height 35\n",
-      "I am sumTree 23\n",
-      "I am height 36\n",
-      "I am sumTree 20\n",
-      "I am height 36\n",
-      "I am sumTree 20\n",
-      "I am height 37\n",
-      "I am sumTree 17\n",
-      "I am height 36\n",
-      "I am sumTree 20\n",
-      "I am height 37\n",
-      "I am sumTree 17\n",
-      "I am height 36\n",
-      "I am sumTree 20\n",
-      "I am height 37\n",
-      "I am sumTree 17\n",
-      "I am height 36\n",
-      "I am sumTree 20\n",
-      "I am height 37\n",
-      "I am sumTree 17\n",
-      "I am height 36\n",
-      "I am sumTree 20\n",
-      "I am height 37\n",
-      "I am sumTree 17\n",
-      "I am height 36\n",
-      "I am sumTree 20\n",
-      "I am height 37\n",
-      "I am sumTree 17\n",
-      "I am height 36\n",
-      "I am sumTree 20\n",
-      "I am height 37\n",
-      "I am sumTree 17\n",
-      "I am height 36\n",
-      "I am sumTree 20\n",
-      "I am height 37\n",
-      "I am sumTree 17\n",
-      "I am height 36\n",
-      "I am sumTree 20\n",
-      "I am height 37\n",
-      "I am sumTree 17\n",
-      "I am height 36\n",
-      "I am sumTree 20\n",
-      "36\n"
+     "ename": "KeyboardInterrupt",
+     "evalue": "Interrupted by user",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-49-bbb8f5e80e12>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mn\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mm\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mtree\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmap\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mint\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0minput\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msplit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mst\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mend\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmax\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtree\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0msumTree\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36mraw_input\u001b[0;34m(self, prompt)\u001b[0m\n\u001b[1;32m    858\u001b[0m                 \u001b[0;34m\"raw_input was called, but this frontend does not support input requests.\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    859\u001b[0m             )\n\u001b[0;32m--> 860\u001b[0;31m         return self._input_request(str(prompt),\n\u001b[0m\u001b[1;32m    861\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_ident\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    862\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_parent_header\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m~/opt/anaconda3/lib/python3.8/site-packages/ipykernel/kernelbase.py\u001b[0m in \u001b[0;36m_input_request\u001b[0;34m(self, prompt, ident, parent, password)\u001b[0m\n\u001b[1;32m    902\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    903\u001b[0m                 \u001b[0;31m# re-raise KeyboardInterrupt, to truncate traceback\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 904\u001b[0;31m                 \u001b[0;32mraise\u001b[0m \u001b[0mKeyboardInterrupt\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Interrupted by user\"\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0;32mNone\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    905\u001b[0m             \u001b[0;32mexcept\u001b[0m \u001b[0mException\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0me\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    906\u001b[0m                 \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlog\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mwarning\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Invalid Message:\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mexc_info\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: Interrupted by user"
      ]
     }
    ],
@@ -135,18 +49,19 @@
     "st = 1\n",
     "end = max(tree)\n",
     "sumTree = 0\n",
-    "while st < end :\n",
+    "height = (st + end)//2\n",
+    "while st <= end :\n",
     "    sumTree = 0\n",
-    "    height = (st + end)//2\n",
-    "    print(\"I am height\",height)\n",
+    "\n",
     "    for t in tree :\n",
     "        if t > height:\n",
     "            sumTree += t - height\n",
-    "    print(\"I am sumTree\", sumTree)\n",
-    "    if sumTree < m :\n",
+    "    if sumTree>=m:\n",
+    "        st = height+1\n",
+    "        \n",
+    "    else:\n",
     "        end = height-1\n",
-    "    else :\n",
-    "        st = height +1\n",
+    "    height = (st + end)//2\n",
     "        \n",
     "print(height)"
    ]
@@ -154,15 +69,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "79b63dfc",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "66580fc2",
+   "id": "b986e2b3",
    "metadata": {},
    "outputs": [],
    "source": []
