--- a/coding_test/dp_triangle.ipynb
+++ b/coding_test/dp_triangle.ipynb
@@ -7,24 +7,67 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def solution(triangle):\n",
-    "    answer = 0\n",
-    "    r = triangle[0][0]\n",
-    "    l = triangle[0][0]\n",
-    "    for i in range(1,len(triangle)):\n",
-    "        \n",
-    "            \n",
-    "    return answer"
+    "def solution(triangle): # dp 테이블 초기화 \n",
+    "    dp = [[0] * len(triangle) for _ in range(len(triangle))]\n",
+    "    dp[0][0] = triangle[0][0] # 거쳐간 숫자의 최댓값 구하기 \n",
+    "    for i in range(0, len(triangle) - 1): \n",
+    "        for j in range(len(triangle[i])): \n",
+    "            dp[i + 1][j] = max(dp[i + 1][j], dp[i][j] + triangle[i + 1][j])\n",
+    "            dp[i + 1][j + 1] = max(dp[i + 1][j + 1], dp[i][j] + triangle[i + 1][j + 1])\n",
+    "    return max(dp[-1])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "c9b19b60",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "3\n",
+      "8\n",
+      "8\n",
+      "1\n",
+      "0\n",
+      "2\n",
+      "7\n",
+      "4\n",
+      "4\n",
+      "4\n",
+      "5\n",
+      "2\n",
+      "6\n",
+      "5\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "solution([[7], [3, 8], [8, 1, 0], [2, 7, 4, 4], [4, 5, 2, 6, 5]])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c9b19b60",
+   "id": "af478ee0",
    "metadata": {},
    "outputs": [],
    "source": [
-    "solution([[7], [3, 8], [8, 1, 0], [2, 7, 4, 4], [4, 5, 2, 6, 5]])"
+    "def solution(triangle):\n",
+    "    "
    ]
   }
  ],
