--- a/coding_test/heap_priorityQueue.ipynb
+++ b/coding_test/heap_priorityQueue.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "883ee540",
+   "id": "4f731bab",
    "metadata": {},
    "outputs": [
     {
@@ -29,15 +29,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
-   "id": "6a3e3831",
+   "execution_count": 41,
+   "id": "bbdc3faf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from collections import deque\n",
-    "\n",
-    "# deq = deque()\n",
-    "\n",
     "def solution(operations):\n",
     "    tList = []\n",
     "    for i in operations:\n",
@@ -49,12 +45,12 @@
     "            try :\n",
     "                tList.remove(min(tList))\n",
     "            except ValueError:\n",
-    "                return [0,0]\n",
+    "                print(\"error\")\n",
     "        else :\n",
     "            try :\n",
     "                tList.remove(max(tList))\n",
     "            except ValueError:\n",
-    "                return [0,0]\n",
+    "                print(\"error\")\n",
     "            \n",
     "    if len(tList) == 0 :\n",
     "            return [0,0]\n",
@@ -65,8 +61,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
-   "id": "de50065c",
+   "execution_count": 42,
+   "id": "28041bdf",
    "metadata": {},
    "outputs": [
     {
@@ -75,7 +71,7 @@
        "[0, 0]"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -86,8 +82,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
-   "id": "a3c8b156",
+   "execution_count": 43,
+   "id": "04e07f5b",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +92,7 @@
        "[7, 5]"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -107,8 +103,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
-   "id": "42651950",
+   "execution_count": 44,
+   "id": "9c16ec90",
    "metadata": {},
    "outputs": [
     {
@@ -117,7 +113,7 @@
        "[6, 5]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -128,29 +124,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
-   "id": "3bacd92e",
+   "execution_count": 45,
+   "id": "6e6f68ac",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[6, 3]"
+       "[6, -1]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "solution( [\"I 4\", \"I -1\", \"I 6\", \"I 3\"])"
+    "solution( [\"I 4\", \"I -1\",\"I -1\", \"I 6\", \"I 3\",\"D -1\"])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "41ef8c12",
+   "id": "56c4276b",
    "metadata": {},
    "outputs": [],
    "source": []
