--- a/coding_test/heap_priorityQueue.ipynb
+++ b/coding_test/heap_priorityQueue.ipynb
@@ -41,19 +41,20 @@
     "        if i.split()[0] == \"I\":\n",
     "            tList.append(int(i.split()[1]))\n",
     "            \n",
-    "        elif int(i.split()[1]) == -1 :\n",
+    "        elif int(i.split()[1]) == -1 : #\"D\"\n",
     "            try :\n",
-    "                tList.remove(min(tList))\n",
+    "#                 tList.\n",
+    "                tList.remove(min(tList)) #최소 힙\n",
     "            except ValueError:\n",
     "                print(\"error\")\n",
-    "        else :\n",
+    "        else : # (i.split()[1]) == 1\n",
     "            try :\n",
-    "                tList.remove(max(tList))\n",
+    "                tList.remove(max(tList)) # 최대 힙\n",
     "            except ValueError:\n",
     "                print(\"error\")\n",
     "            \n",
     "    if len(tList) == 0 :\n",
-    "            return [0,0]\n",
+    "        return [0,0]\n",
     "        \n",
     "    answer = [max(tList),min(tList)]\n",
     "    return answer"
