--- a/coding_test/pq_printer.ipynb
+++ b/coding_test/pq_printer.ipynb
@@ -2,10 +2,20 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "461c1bcc",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Banana\n",
+      "Cherry\n",
+      "Apple\n"
+     ]
+    }
+   ],
    "source": [
     "#우선순위큐를 사용해서 구현\n",
     "from queue import PriorityQueue\n",
@@ -20,6 +30,48 @@
     "print(que.get()[1])  # Cherry\n",
     "print(que.get()[1])  # Apple\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cece1241",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from collections import deque \n",
+    "\n",
+    "def solution(priorities, location):\n",
+    "    queueList = []\n",
+    "    \n",
+    "    for i in range(len(priorities)):\n",
+    "        queueList.append([i,priorities[i]])\n",
+    "\n",
+    "    printOrder = []\n",
+    "    queue = deque(queueList)\n",
+    "\n",
+    "    while len(printOrder) != len(priorities):\n",
+    "        maxNum = 1\n",
+    "        \n",
+    "        #maxNum 구하기\n",
+    "        for que in queue : \n",
+    "            if que[1] > maxNum :\n",
+    "                maxNum = que[1]\n",
+    "            \n",
+    "    \n",
+    "        popList = queue.popleft()\n",
+    "        num = popList[1]\n",
+    "\n",
+    "        if maxNum == num:\n",
+    "            printOrder.append(popList)\n",
+    "        else :\n",
+    "            queue.append(popList)\n",
+    "        \n",
+    "    for index, p in enumerate(printOrder) :\n",
+    "        if p[0] == location:\n",
+    "            answer = index+1\n",
+    "            \n",
+    "    return answer"
    ]
   }
  ],
