--- a/coding_test/dijkstra_zelda.ipynb
+++ b/coding_test/dijkstra_zelda.ipynb
@@ -174,7 +174,7 @@
     "    \n",
     "def dijkstra(graph, start):\n",
     "    distances = {node: float('inf') for node in graph}  # start로 부터의 거리 값을 저장하기 위함\n",
-    "    distances[start] = 0  # 시작 값은 0이어야 함\n",
+    "    distances[start] = graph[(0,0)]  # 시작 값은 0이어야 함\n",
     "    queue = []\n",
     "    heapq.heappush(queue, (distances[start], start))  # 시작 노드부터 탐색 시작 하기 위함.\n",
     "\n",
@@ -210,7 +210,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dbf4c2f3",
+   "id": "e4bdb9af",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -218,7 +218,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0d589442",
+   "id": "a4f4621a",
    "metadata": {},
    "outputs": [],
    "source": []
