--- a/coding_test/bitmask_set.ipynb
+++ b/coding_test/bitmask_set.ipynb
@@ -2,30 +2,65 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 7,
+   "id": "73fcbf14",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "ValueError",
+     "evalue": "invalid literal for int() with base 10: ''",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-7-29b7bdee7ac0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0msys\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mn\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msys\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mstdin\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mreadline\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mS\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mset\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0m_\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mn\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: ''"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "\n",
+    "n = int(sys.stdin.readline())\n",
+    "S = set()\n",
+    "for _ in range(n):\n",
+    "        ip = sys.stdin.readline().rstrip()\n",
+    "        if ip == \"all\":\n",
+    "            S = set(range(1,21))\n",
+    "        elif ip == \"empty\":\n",
+    "            S = set()\n",
+    "        else :\n",
+    "            oper = ip.split()[0]\n",
+    "            num = int(ip.split()[1])\n",
+    "            if oper == \"add\":\n",
+    "                S.add(num)\n",
+    "            if oper == \"remove\":\n",
+    "                try:\n",
+    "                    S.remove(num)\n",
+    "                except KeyError:\n",
+    "                    pass\n",
+    "\n",
+    "            if oper == \"check\":\n",
+    "                if num in S:\n",
+    "                    print(1)\n",
+    "                else :\n",
+    "                    print(0)\n",
+    "            if oper == \"toggle\":\n",
+    "                if num in S:\n",
+    "                    S.remove(num)\n",
+    "                else :\n",
+    "                    S.add(num)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "a741bb11",
+   "id": "03aeeac8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(\"start\")\n",
-    "\n",
-    "/*\n",
-    "add x: S에 x를 추가한다. (1 ≤ x ≤ 20) S에 x가 이미 있는 경우에는 연산을 무시한다.\n",
-    "remove x: S에서 x를 제거한다. (1 ≤ x ≤ 20) S에 x가 없는 경우에는 연산을 무시한다.\n",
-    "check x: S에 x가 있으면 1을, 없으면 0을 출력한다. (1 ≤ x ≤ 20)\n",
-    "toggle x: S에 x가 있으면 x를 제거하고, 없으면 x를 추가한다. (1 ≤ x ≤ 20)\n",
-    "all: S를 {1, 2, ..., 20} 으로 바꾼다.\n",
-    "empty: S를 공집합으로 바꾼다. */\n",
-    "\n",
-    "\n",
-    "import sys\n",
-    "\n",
-    "n = sys.stdin.readline()\n",
-    "\n",
-    "for _ in range(int(n)):\n",
-    "    ip = sys.stdin.readline()\n",
-    "    oper = ip.split()[0]\n",
-    "    num = ip.split()[1]"
+    "#Bit_Masking\n",
+    "\n"
    ]
   }
  ],
