--- a/coding_test/bitmask_set.ipynb
+++ b/coding_test/bitmask_set.ipynb
@@ -20,7 +20,7 @@
    ],
    "source": [
     "import sys\n",
-    "\n",
+    "# 30864(메모리)\t4652(시간)\n",
     "n = int(sys.stdin.readline())\n",
     "S = set()\n",
     "for _ in range(n):\n",
@@ -60,7 +60,44 @@
    "outputs": [],
    "source": [
     "#Bit_Masking\n",
-    "\n"
+    "#30864(메모리)\t4172(시간)\n",
+    "import sys\n",
+    "\n",
+    "# main\n",
+    "m = int(sys.stdin.readline())\n",
+    "\n",
+    "bit = 0\n",
+    "for _ in range(m):\n",
+    "    command = sys.stdin.readline().split()\n",
+    "    op = command[0]\n",
+    "    if op == \"all\":\n",
+    "        bit = (1 << 20) - 1\n",
+    "        \n",
+    "    elif op == \"empty\":\n",
+    "        bit = 0\n",
+    "        \n",
+    "    else:\n",
+    "        num = int(command[1]) - 1\n",
+    "\n",
+    "        # add\n",
+    "        if op == 'add':\n",
+    "            bit |= (1 << num)\n",
+    "            \n",
+    "        # remove\n",
+    "        elif op == 'remove':\n",
+    "            bit &= ~(1 << num)\n",
+    "            \n",
+    "        # check\n",
+    "        elif op == 'check':\n",
+    "            if bit & (1 << num) == 0:\n",
+    "                print(0)\n",
+    "            else:\n",
+    "                print(1)\n",
+    "                \n",
+    "        # toggle\n",
+    "        elif op == 'toggle':\n",
+    "            bit = bit ^ (1 << num)\n",
+    "            "
    ]
   }
  ],
